--- a/css/_600.scss
+++ b/css/_600.scss
@@ -26,7 +26,7 @@
 }
 
 .quote {
-	width: 100vw;
+	width: 100%;
 }	
 
 .authors {
